@@ -159,7 +159,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>GuacamoleTestSuite.txt</filereports>
-          <argLine>-Xmx3072m</argLine>
+          <argLine>-Xmx4g -XX:MaxPermSize=256m</argLine>
           <stdout>F</stdout>
         </configuration>
         <executions>
@@ -346,6 +346,12 @@
       <artifactId>bdg-utils-misc</artifactId>
       <version>0.1.1</version>
       <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
